Reorganization of parts, chapters and sections + correction of part 1.

--- a/main.lyx
+++ b/main.lyx
@@ -72,10 +72,6 @@ Descente de la Loire
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 1
-\end_layout
-
-\begin_layout Section*
 Traversée de l'Ardèche
 \end_layout
 
@@ -134,28 +130,19 @@ avril
 \end_inset
 
 bons kilomètres de chemins terreux à travers l'Ardèche, destination Retournac
- où stationne notre kayak, en passant par le mont Gerbier-de-Jonc
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Il culmine à 1550
+ où stationne notre kayak, en passant par le mont Gerbier-de-Jonc, la source
+ du beau fleuve Loire, culminant à 1550
 \begin_inset space ~
 \end_inset
 
 mètres d'altitude.
 \end_layout
 
-\end_inset
-
-, la source du beau fleuve Loire.
-\end_layout
-
 \begin_layout Standard
 Les premiers pas sont difficiles et notre inexpérience flagrante.
  Ah ! nous en avions fait des nuits à la belle étoile, des périples en kayak,
  des bivouacs en veux-tu en voilà, des randonnées en montagne...
- Mais là, nous ne sommes que deux baudets boiteux civilisés, qui traînons
+ Mais là, nous ne sommes que deux baudets boiteux civilisés qui traînons
  des sacs beaucoup trop lourds.
  Sur le papier, tout paraissait utile.
  Nous aurions pourtant dû nous demander : 
@@ -167,7 +154,7 @@ Qu'est-ce qui est essentiel ?
 \end_inset
 
 , et bazarder le reste.
- Finalement, nous nous tapons -- durant une semaine et 120
+ Finalement, nous nous coltinons -- durant une semaine et 120
 \begin_inset space ~
 \end_inset
 
@@ -175,45 +162,10 @@ kilomètres -- des sacs de, respectivement, 14
 \begin_inset space ~
 \end_inset
 
-kilos pour Marie et 21 pour moi
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Il aurait été plus correct d'avoir des sacs de, respectivement, 10
-\begin_inset space \thinspace{}
-\end_inset
-
-kg pour Marie et 15
-\begin_inset space \thinspace{}
-\end_inset
-
-kg pour moi.
-\end_layout
-
-\end_inset
-
-.
- Hum ! ça se porte, ça s'endure
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-\begin_inset Quotes fld
-\end_inset
-
-ça se porte, ça s'endure
-\begin_inset Quotes frd
-\end_inset
-
- : cette assertion est toute relative, puisque cette lourdeur provoque des
- maux bien réels (et dangereux) : fragilisation accrue des chevilles, des
- genoux et du dos.
-\end_layout
-
-\end_inset
-
-, mais ça n'est pas malin.
+kilos pour Marie et 21 pour moi.
+ Hum ! ça se porte, ça s'endure, mais ça n'est pas malin, puisque cette
+ lourdeur provoque des maux bien réels (et dangereux) : fragilisation accrue
+ des chevilles, des genoux et du dos.
  Au bout de 4
 \begin_inset space ~
 \end_inset
@@ -233,37 +185,15 @@ Il nous aura fallu ces 4
 
 jours -- de rodage et d'apprentissage -- pour arriver au mont Gerbier\SpecialChar \nobreakdash-
 de\SpecialChar \nobreakdash-
-Jonc
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Jeudi, 7
+Jonc,
+ le jeudi 7
 \begin_inset space ~
 \end_inset
 
-avril
-\begin_inset space ~
-\end_inset
-
-2011.
-\end_layout
-
-\end_inset
-
-.
+avril.
  De Aubenas jusqu'à cette fameuse source, nous n'avons emprunté que (ou
- presque) des chemins de randonnée (GR, GRP, PR et compagnie)
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-L’Ardèche semble très bien aménagée en la matière.
-\end_layout
-
-\end_inset
-
-, à travers des paysages et panoramas plus que fameux.
+ presque) des chemins de randonnée (GR, GRP, PR et compagnie), à travers
+ des paysages et panoramas plus que fameux.
  Malgré les premières douleurs, le froid des nuits en altitude, l'organisation
  et les habitudes à mettre en branle, le bouleversement induit par ce long
  voyage..., ces jours auront été un vrai plaisir.
@@ -315,26 +245,8 @@ Velay.
  Une blessure au genou gauche de Marie s'est également affirmée, la faisant
  grimacer et souffrir, diminuant ses réjouissances et remodelant la semaine
  à venir.
- Le matin d'un beau lundi d'avril
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Lundi, 11
-\begin_inset space ~
-\end_inset
-
-avril
-\begin_inset space ~
-\end_inset
-
-2011.
-\end_layout
-
-\end_inset
-
-, Marie -- préférant la sécurité à un masochisme certain -- décida de boucler
- les 25
+ Le matin d'un beau lundi d'avril, préférant la sécurité à un masochisme
+ certain, elle décida de boucler les 25
 \begin_inset space ~
 \end_inset
 
@@ -354,12 +266,8 @@ heures de marche en plus, et 25
 \begin_inset space ~
 \end_inset
 
-kilomètres au total -- cette étape qui aurait dû en être deux
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Je m'autorisais, cependant, 6
+kilomètres au total -- cette étape qui aurait dû en être deux, m'autorisant
+ cependant 6
 \begin_inset space ~
 \end_inset
 
@@ -371,72 +279,31 @@ stop
 \begin_inset Quotes frd
 \end_inset
 
- entre Coubon et le Puy, emmené par un berger itinérant en camionnette aménagée.
+, emmené par un berger itinérant en camionnette aménagée.
  Cool !
 \end_layout
 
-\end_inset
-
-.
-\end_layout
-
 \begin_layout Standard
-L'apparition et l'affirmation de cette blessure ont été, certes, désagréables
- pour Marie, mais très formatrices.
- Physiquement, elles nous auront appris à écouter nos corps et à bien les
- traiter, ainsi que les limites de ces corps.
- Moralement, elles nous auront appris à nous soutenir et nous comprendre
- mutuellement
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Non sans mal...
-\end_layout
-
-\end_inset
-
-, pour faire face à un échec.
- Philosophiquement, elles nous auront permis d'appréhender divers points
- :
-\end_layout
-
-\begin_layout Itemize
-D'abord, une blessure (ou toute autre faiblesse) n'est qu'un échec relatif
- au voyage.
- Elle ne le limite pas, mais le forme, le compose ;
-\end_layout
-
-\begin_layout Itemize
-Également, un tel périple doit être, selon nous, une aventure humaine plutôt
+Cette blessure a été certes désagréable, mais très formatrice.
+ Elle nous a appris à écouter nos corps et bien les traiter, à se soutenir
+ et se comprendre mutuellement, à ne plus y voir un échec au voyage mais
+ un nouvel ingrédient.
+ Également, un tel périple doit être, selon nous, une aventure humaine plutôt
  que physique.
- Le vivant, nous tâcherons, désormais, de nous construire à travers lui
- et de faire fi des remarques d'ordre compétitif, de tout un chacun (y compris
- de nous même) ;
-\end_layout
-
-\begin_layout Itemize
-Finalement, ce voyage a une grande résonance amoureuse.
- Les difficultés peuvent éloigner et laisser croire que l'expérience est
- solitaire.
- Mais que nenni ! Même si l'enrichissement individuel est incontestable,
- il est et sera avant tout amoureux et, donc, collectif.
-\end_layout
-
-\begin_layout Standard
-Seul regret à cette blessure : que Marie ait manqué les magnifiques gorges
- de la Loire.
+ Nous tâcherons, alors, de faire fi des remarques d'ordre compétitif de
+ tout un chacun (y compris de nous même).
+ Seul regret : que Marie ait manqué les magnifiques gorges de la Loire.
  Mais ce n'est que partie remise...
 \end_layout
 
 \begin_layout Standard
 Cette première semaine de traversée ardéchoise aura été un petit voyage
  en soi : nous remplissant les yeux et la tête ; nous fatiguant et nous
- endurcissant le corps ; nous apprenant la marche au long court et le voyage
+ endurcissant le corps ; nous apprenant la marche au long cours et le voyage
  en autonomie.
  Mais il y encore du boulot.
- Chouette ! Elle fût d'excellentes prémices, à travers une Ardèche qui vaut
- -- putain, je vous l'assure -- ses larges coups d'yeux.
+ Chouette ! Elle fut d'excellentes prémices, à travers une Ardèche qui vaut
+ -- je vous l'assure -- ses larges coups d'yeux.
  Allez-y ! Nous, nous y retournerons.
  Pour finir, nous retiendrons une belle solitude à parcourir l'Ardèche et
  de froids levers réchauffés : par un bon café, un grand paysage, quelques
@@ -444,29 +311,15 @@ Cette première semaine de traversée ardéchoise aura été un petit voyage
 \end_layout
 
 \begin_layout Standard
-Laissant cette blessure derrière nous, nous rallions maintenant
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Mercredi, 13
+Laissant cette blessure au loin, nous rallions Retournac en train, le mercredi
+ 13
 \begin_inset space ~
 \end_inset
 
-avril
-\begin_inset space ~
-\end_inset
-
-2011.
+avril, et rangeons nos godillots au fond du kayak, prêts à pagayer.
 \end_layout
 
-\end_inset
-
- Retournac en train et rangeons nos godillots au fond du kayak, prêts à
- pagayer.
-\end_layout
-
-\begin_layout Section*
+\begin_layout Chapter*
 Vivre dans ce coin d'Ardèche
 \end_layout
 
@@ -504,7 +357,7 @@ Cette dynamique touristique contribue largement à l'augmentation du prix
  par les vaches des départements voisins.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Le mont Gerbier-de-Jonc
 \end_layout
 
@@ -572,10 +425,6 @@ Gerbier
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 2
-\end_layout
-
-\begin_layout Section*
 Baptême ligérien
 \end_layout
 
@@ -606,22 +455,8 @@ avril
 Premiers coups de pagaies ; premières sensations.
  Et second départ qui devrait nous mener de Retournac à Lavau\SpecialChar \nobreakdash-
 sur\SpecialChar \nobreakdash-
-Loire
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Toute petite ville de l'estuaire ligérien, située à 20
-\begin_inset space ~
-\end_inset
-
-kilomètres environ de Saint\SpecialChar \nobreakdash-
-Nazaire.
-\end_layout
-
-\end_inset
-
-.
+Loire, petite
+ ville de l'estuaire ligérien.
  Nous kayakerons pour 900
 \begin_inset space ~
 \end_inset
@@ -661,7 +496,7 @@ Deux semaines déjà.
  À pagayer, sans surprise.
  Mais beaucoup, aussi, à pousser, tirer, lever, rouler ; les pieds dans
  l'eau trop souvent, le cul mouillé parfois.
- Et nous galérons, merde de merde, maudissant cette Loire.
+ Et nous galérons, maudissant cette Loire.
  En ce début d'année, mes amis : pas de neige, pas de pluie.
  Alors, pas d'eau non plus.
  Et une Loire tristement basse, comme en un sec été.
@@ -678,22 +513,8 @@ Avant d'aller plus loin, laissez-moi vous préciser...
 \begin_inset Newline newline
 \end_inset
 
-Nous naviguons -- Marie, moi et notre barda -- sur un kayak pliant
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-À ne pas confondre avec un kayak gonflable.
-\end_layout
-
-\end_inset
-
-, de manufacture polonaise
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Un 
+Nous et notre barda naviguons sur un kayak pliant, de manufacture polonaise
+ (un 
 \begin_inset Quotes fld
 \end_inset
 
@@ -701,12 +522,7 @@ Amazon II Expedition
 \begin_inset Quotes frd
 \end_inset
 
- du constructeur Wayland.
-\end_layout
-
-\end_inset
-
-.
+ du constructeur Wayland).
  
 \begin_inset Quotes fld
 \end_inset
@@ -716,7 +532,7 @@ Qu'est-ce qu'un kayak pliant ?
 \end_inset
 
  me demanderez-vous.
- Un kayak est une embarcation à propulsion humaine -- principalement
+ Un kayak est une embarcation à propulsion humaine
 \begin_inset Foot
 status collapsed
 
@@ -726,7 +542,7 @@ On peut lui adjoindre une voile ; et même un (petit) moteur.
 
 \end_inset
 
- --, assez plate, dans laquelle on se tient à fleur d'eau et que l'on manie
+, assez plate, dans laquelle on se tient à fleur d'eau et que l'on manie
  -- généralement -- à la pagaie double
 \begin_inset Foot
 status collapsed
@@ -776,9 +592,8 @@ Louizanne
 Louizanne
 \emph default
  a du caractère et semble solide comme un roc.
- Comme elles aussi, il a pourtant ses faiblesses et une certaine fragilité
- -- sa peau, son armature -- le rendant largement vulnérable à certains
- environnements.
+ Comme elles aussi, il a pourtant ses faiblesses et une certaine fragilité,
+ le rendant largement vulnérable à certains environnements.
  Cette dernière précision est fondamentale ; elle est la raison des plus
  grands de nos stress et préoccupations.
  La voilà faite, nous pouvons alors poursuivre.
@@ -793,7 +608,7 @@ Nous partîmes par un bel après-midi, la fleur en bout de pagaie, prêts à
  en découdre.
  Et nous nous arrêtâmes, trois heures et à peine cinq kilomètres plus tard,
  les têtes vidées du trop plein d'attention mobilisée.
- Première journée, qui fût notre 
+ Première journée qui fût notre 
 \begin_inset Quotes fld
 \end_inset
 
@@ -901,33 +716,7 @@ rikiki
 \end_inset
 
  ; qui créent de belles zones de plaisances humaines ; qui modulent une
- navigation à coups de lâchés d'eau
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-La faisait passer d'un état 
-\begin_inset Quotes fld
-\end_inset
-
-pieds dans l'eau à tirer le kayak
-\begin_inset Quotes frd
-\end_inset
-
-, à un état 
-\begin_inset Quotes fld
-\end_inset
-
-au taquet, la pagaie en main et les yeux rivés sur les remous
-\begin_inset Quotes frd
-\end_inset
-
-.
-\end_layout
-
-\end_inset
-
-...
+ navigation à coups de lâchés d'eau...
 \begin_inset Newline newline
 \end_inset
 
@@ -950,8 +739,8 @@ Mais, non ! La Loire n'est pas un fleuve sauvage.
 
 \begin_layout Standard
 La croyance individuelle, que ce périple a largement lessivée, est la suivante.
- De la Loire, Marie et moi ne connaissions que l'estuaire et l'embouchure,
- près desquels nous avons fait pousser nos vingts premières années.
+ De la Loire, nous ne connaissions que l'estuaire et l'embouchure, près
+ desquels nous avons fait pousser nos vingts premières années.
  Tout au plus, nous l'avions aperçue en quelques autres endroits -- de villes
  ou de châteaux -- où elle était, probablement, déjà bien large.
  Bien entendu, nous avions préparé ce voyage et savions -- tout de même
@@ -981,7 +770,7 @@ e que, oui, c'était aussi cette Loire là que nous étions venu chercher.
  la Loire nous apportait sur son lit scintillant : embâcles de rochers ou
  d'arbres -- petits à gros -- et leurs remous -- gros à petits -- ; nombreuses
  et larges gravières et sablières ; tapis de renoncules envahissantes ;
- et autres merdes humaines.
+ et nomdreux déchets humains.
 \shape smallcaps
 
 \begin_inset VSpace bigskip
@@ -1008,49 +797,23 @@ Tout le reste, il faut aussi en parler et l'écrire.
 \end_layout
 
 \begin_layout Standard
-Les premiers quinze jours de navigation ligérienne sont terminés, aboutissant,
- après le passage du barrage de Villerest, puis de la ville de Roanne
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Samedi
+Les premiers quinze jours de navigation sont terminés, aboutissant, après
+ le passage du barrage de Villerest le samedi
 \begin_inset space ~
 \end_inset
 
-23 et dimanche
+23
 \begin_inset space ~
 \end_inset
 
-24
-\begin_inset space ~
-\end_inset
-
-avril
-\begin_inset space ~
-\end_inset
-
-2011.
-\end_layout
-
-\end_inset
-
-, à des étendues infinies, sableuses et arborées
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Où paissent paisiblement, les fameuses et goûtues vaches charolaises.
-\end_layout
-
-\end_inset
-
-.
+avril, puis de la ville de Roanne le lendemain, à des étendues infinies,
+ sableuses et arborées, où paissent paisiblement les fameuses et goûtues
+ vaches charolaises.
  Nous voilà à Digoin, pour un repos et un décrassage bien mérités.
  Maintenant, la suite.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Deux mondes
 \end_layout
 
@@ -1102,17 +865,13 @@ Qu'il est dommage, alors, de devoir partir en pleine nature pour retrouver
 \end_layout
 
 \begin_layout Chapter*
-Chapite 3
-\end_layout
-
-\begin_layout Section*
 Contrastes de Loire
 \end_layout
 
 \begin_layout Standard
 Digoin et son pont-canal sont derrière nous, depuis trois bons jours.
  Hier, c'est la ville de Decize que nous avons passée -- après une pression
- fraîche et un petit portage très chiant -- en compagnie d'un kayakiste
+ fraîche et un petit portage très chiant -- en compagnie d'Olivier, un kayakiste
  en vacances, descendant la Loire jusqu'à Orléans.
  Nous nous sommes suivis : nous, lourds comme un sac à patates, le kayak
  bourré de victuailles, zigzaguant péniblement ; lui, léger sur son blanc
@@ -1189,24 +948,12 @@ heures.
 
 jours -- docteur -- que nous petit-déjeunons sous un soleil déjà bien haut.
  Aucune aurore dans nos têtes ; cela commence à être problématique pour
- le moral (impression d'être deux bons à rien, gâchant le temps).
- Mais nous en reparlerons plus tard, probablement.
- Aujourd'hui, c'est aujourd'hui.
- Ne nous lamentons pas.
+ le moral : impression d'être deux bons à rien, gâchant le temps.
+ Mais ne nous lamentons pas.
  Le ciel est clair ; le mois passé a été une merveille ; ceux à venir s'annoncen
 t égaux.
  Marie bouquine, moi j'écris, à quelques pas en amont de notre première
- centrale nucléaire
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Centrale nucléaire de Belleville.
-\end_layout
-
-\end_inset
-
-.
+ centrale nucléaire, celle de Belleville.
  Nous la passerons dans l'après-midi -- tranquillement -- savourant cette
  journée de repos.
  Puis dimanche, Orléans la pucelle pointera les faubourgs de son nez.
@@ -1363,8 +1110,7 @@ Nous avions, durant de longues journées, les têtes exclusivement dédiées
 \begin_inset Quotes fld
 \end_inset
 
-Ouch ! Et merde, un banc de sable.
- Quels cons !
+Ouch ! Et merde, un banc de sable !
 \begin_inset Quotes frd
 \end_inset
 
@@ -1441,8 +1187,7 @@ Velay, prends tes chemins et descends les contreforts de
 
 \shape italic
 \size small
-Enfin, repose toi, Loire, comme nous, sur ces immensités de sable et de
- cailloux fins.
+Enfin, repose toi, Loire, sur ces immensités de sable et de cailloux fins.
  Et va à la rêverie, chatouillée par mille oiseaux.
  
 \end_layout
@@ -1456,7 +1201,7 @@ Tous les contrastes de la Loire se trouvent là, en fin de compte : des hauteurs
 \end_layout
 
 \begin_layout Standard
-Poésie à part, voici, plus pragmatique, notre Loire.
+Poésie à part, voici notre Loire.
  De Roanne à Digoin, on finit de descendre le Massif central par le nord,
  et on s'extasie à la vue de superbes et nombreux oiseaux.
  Les paysages sont grands et respirent.
@@ -1513,7 +1258,7 @@ mai
 13 : rien à espérer, nous sommes heureux et maîtres de nos destins.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Filent l'eau, le sable, la vie
 \end_layout
 
@@ -1584,10 +1329,6 @@ diem
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 4
-\end_layout
-
-\begin_layout Section*
 Sable, digue, océan et plénitude
 \end_layout
 
@@ -1620,7 +1361,7 @@ Où en étions-nous ? Quelqu'un qui suit ? Nous en étions tout juste à Amboise
 \begin_inset space ~
 \end_inset
 
-mai -- au lendemain duquel je vous ai laissés -- fût un n\SpecialChar \nobreakdash-
+mai -- au lendemain duquel je vous ai laissés -- fut un n\SpecialChar \nobreakdash-
 ième jour de repos.
  Nos godillots ont marqué la jolie ville touristique d'Amboise.
  Nos esprits et nos imaginations y ont exquisément vagabondé : au Clos
@@ -1719,8 +1460,8 @@ Nazaire, où habitent
  Encore une fois, je ne vous épargne pas, avec ce bond dans le temps et
  dans l'espace.
  Cela fait une semaine -- déjà -- que notre aventure ligérienne s'est terminée.
- Une semaine que nous nous reposons, Marie, moi, nos muscles, nos tendons,
- nos nerfs et nos têtes.
+ Une semaine que nous nous reposons les muscles, les tendons, les nerfs
+ et la tête.
  Car, à la fin des fins, tout dans nos corps a fini pas être grippé, crispé
  ; il nous fallait alors ce repos.
  Cette dernière ligne droite n'était pas propice à l'écriture.
@@ -1781,7 +1522,7 @@ Je m'égare.
 2011 a enlevé beaucoup de sa superbe, à ce grand labyrinthe.
  Et bien souvent, de toutes les issues possibles, il n'en restait qu'une
  ou deux tout juste praticables pour embarcations plates.
- Cette sécheresse fût l'une des principales composantes de notre descente
+ Cette sécheresse fut l'une des principales composantes de notre descente
  ligérienne.
  Elle nous a fait souffler, suer, grimacer, gémir, peiner, autant qu'elle
  a du vous toucher (pour peu que vous tentiez de planter des patates, sur
@@ -1795,7 +1536,7 @@ Je m'égare.
 Mais poursuivons.
  Doucement, au fil de l'eau et des jours, l'estuaire s'est fait ressentir,
  subtilement.
- Ce fût tout un mélange : d'abord le sable, les digues, les méandres, le
+ Ce fut tout un mélange : d'abord le sable, les digues, les méandres, le
  fort vent d'ouest et avec lui, les ciels nuageux ; puis les bateaux de
  pêche ou à voile, et les oiseaux marins par centaines ; enfin -- et avec
  une marée de plus en plus puissante -- la vase, les roselières et quelques
@@ -1819,11 +1560,7 @@ Les jours filèrent encore ; puis le réveil sonna.
 \begin_inset space ~
 \end_inset
 
-mai
-\begin_inset space ~
-\end_inset
-
-2011, la veille de notre 
+mai, la veille de notre 
 \begin_inset Quotes fld
 \end_inset
 
@@ -1911,7 +1648,7 @@ Luxe
 
  ! Tout ça ! Notre dernière nuit se fît douillette, posée sur le moelleux
  d'un bon matelas.
- Et le petit déjeuner fût paisible, sous les auspices de sainte Christine
+ Et le petit déjeuner fut paisible, sous les auspices de sainte Christine
  et saint Benoît (tante et tonton).
  Autant vous dire que nous partîmes dans d'excellentes dispositions, prêts
  à en découdre et en finir, à fouetter les vagues et à pagayer, 
@@ -1947,14 +1684,14 @@ h
  mus par une transe joyeuse.
  Flap flap, nos bras s'agitèrent.
  Flap flap, l'embarcation fila cap à l'ouest, aspirée par les débuts timides
- d'une marée descendante.
+ de la marée descendante.
 \end_layout
 
 \begin_layout Standard
-Un paysage bouleversant s'anima alors tout azimut.
+Un paysage bouleversant s'anima alors tous azimus.
  Et sur nos joues glissait de l'eau salée : celle des vagues de l'estuaire
  et sûrement deux ou trois larmes de bonheur.
- Marie et moi avions, cent et cent fois, parcouru les marais de Loire, contemplé
+ Nous avions, cent et cent fois, parcouru les marais de Loire, contemplé
  les bords de mer et scruté leurs oiseaux.
  Nous connaissions les beautés de ces endroits ; nous nous en étions si
  souvent émus.
@@ -2002,7 +1739,7 @@ Finalement, c'est au ras des roseaux et les jambes dans la vase, que nous
 Ainsi se termina notre descente de Loire du printemps 2011.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Le phoque et le pont
 \end_layout
 
@@ -2084,7 +1821,7 @@ Le pont passé, nous continuâmes notre chemin, cahin-caha, entre eaux et
  Puis apparut -- comme prévu sur notre carnet de route -- un second vieux
  pont, doublé d'un autre (récent).
  À priori, pas d'ennui ici.
- Mais l'autre con de Wilson, là-bas, nous avait ramollis.
+ Mais l'autre Wilson, là-bas, nous avait ramollis.
  Et nous voici, encore une fois, longeant un foutu pont sur toute sa longueur,
  cherchant une issue tranquille.
  Bof.
@@ -2185,202 +1922,11 @@ Le tête-à-tête dura dix secondes, un peu plus, un peu moins.
  Et hop, la voilà repartie, plongeant dans les étincelles du soleil couchant.
 \end_layout
 
-\begin_layout Chapter*
-Annexes
-\end_layout
-
-\begin_layout Section*
-Carnet de route
-\end_layout
-
-\begin_layout Standard
-Les 10
-\begin_inset space ~
-\end_inset
-
-pages ou 5
-\begin_inset space ~
-\end_inset
-
-feuillets qui suivent forment le 
-\emph on
-carnet de route
-\emph default
- de notre 
-\begin_inset Quotes fld
-\end_inset
-
-descente de Loire
-\begin_inset Quotes frd
-\end_inset
-
- en kayak.
-\end_layout
-
-\begin_layout Standard
-Découpez-le, adaptez-le et servez-vous en pour descendre ce beau fleuve,
- de sa source jusqu'à son estuaire, ou simplement quelques-uns de ses mille
- kilomètres.
-\end_layout
-
-\begin_layout Standard
-Il est composé de trois parties.
-\end_layout
-
-\begin_layout Standard
-La 1
-\begin_inset script superscript
-
-\begin_layout Plain Layout
-ère
-\end_layout
-
-\end_inset
-
- est un tableau et sa légende, listant les villes et autres lieux remarquables
- bordant la Loire, ainsi que des informations sur chacun (kilomètres, attraits
- culturel, dangers et difficultés à proximité...).
-\end_layout
-
-\begin_layout Standard
-La 2
-\begin_inset script superscript
-
-\begin_layout Plain Layout
-e
-\end_layout
-
-\end_inset
-
- est une liste des dangers et des difficultés qui jalonnent le fleuve, ainsi
- que les manières dont nous les avons passés et appréhendés.
- Ceux-ci sont numérotés de 1
-\begin_inset space ~
-\end_inset
-
-à
-\begin_inset space ~
-\end_inset
-
-49 et cités dans le 1
-\begin_inset script superscript
-
-\begin_layout Plain Layout
-ère
-\end_layout
-
-\end_inset
-
- partie.
-\end_layout
-
-\begin_layout Standard
-La 3
-\begin_inset script superscript
-
-\begin_layout Plain Layout
-e
-\end_layout
-
-\end_inset
-
- partie inclut deux petites cartes, centrées sur les deux grands barrages
- de la Loire : celui de Grangent et celui de Villerest.
- Y sont tracés les cheminements que nous avons suivis pour les franchir,
- portant notre kayak sur un kilomètre et demi, à chaque fois.
-\end_layout
-
-\begin_layout Standard
-Vous saurez donc les lieux pratiques et/ou sympas où vous arrêter, les difficult
-és auxquelles vous serez confrontés et comment les franchir.
- Pour le reste, nous vous encourageons à improviser et vous laisser aller...
-\end_layout
-
-\begin_layout Standard
-Une toute dernière précision, d'importance cependant.
- Nous avons descendu la Loire en avril et mai
-\begin_inset space ~
-\end_inset
-
-2011, par (très) basses eaux et (très) beau temps, sur un kayak démontable,
- bien plus fragile que leurs homologues rigides ou gonflables.
- Ce contexte est -- bien entendu -- à prendre en compte, dans votre lecture
- de ce 
-\emph on
-carnet de route
-\emph default
-.
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-begin{flushleft}
-\end_layout
-
-\begin_layout Plain Layout
-
-	
-\backslash
-newgeometry{margin=0.5cm, left=1.5cm}
-\end_layout
-
-\begin_layout Plain Layout
-
-	
-\backslash
-pagestyle{empty}
-\end_layout
-
-\end_inset
-
-
-\begin_inset CommandInset include
-LatexCommand include
-filename "Roadbook Loire.lyx"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-end{flushleft}
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-restoregeometry
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
 \begin_layout Part
 Grande marche
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 1
-\end_layout
-
-\begin_layout Section*
 Cap à l'est !
 \end_layout
 
@@ -2677,7 +2223,7 @@ e.
 \begin_layout Standard
 En avril et mai, nous avons réalisé la première partie de notre grande escapade
  de 2011 : la descente de la Loire en kayak.
- Cette épreuve fût un peu rude au début, mais facile et bucolique dans l'ensembl
+ Cette épreuve fut un peu rude au début, mais facile et bucolique dans l'ensembl
 e.
  Nous l'avons terminée dans la boue, les rires et la joie, le sourire collé
  aux oreilles et des paillettes d'or plein les yeux (ou était-ce du sable
@@ -2702,7 +2248,7 @@ Puis, reposés, nous nous sommes lancés dans la seconde longueur, joyeux
 \end_layout
 
 \begin_layout Standard
-Le premier démon qui se montra à nous -- petit et éphémère -- fût l'outil
+Le premier démon qui se montra à nous -- petit et éphémère -- fut l'outil
  même de notre voyage : la marche.
  Cette marche est plus impliquante, pour le corps et l'esprit, que ne le
  furent mille coups de pagaie sur un kayak.
@@ -2712,7 +2258,7 @@ Le premier démon qui se montra à nous -- petit et éphémère -- fût l'outil
 \end_layout
 
 \begin_layout Standard
-Le second à apparaître -- global et immuable -- fût le genre humain dans
+Le second à apparaître -- global et immuable -- fut le genre humain dans
  toute sa bêtise, son avidité, sa domination, son orgueil.
  Ce démon là semble omniprésent et se tient à de solides fondations.
  Nous avons pourtant convenu de ne jamais le laisser nous abattre mais,
@@ -2743,7 +2289,7 @@ chemins de Saint-Jacques
 \begin_inset Quotes frd
 \end_inset
 
- comme aire de jeu pour nos déambulations libertaires, ce fût mû, assurément,
+ comme aire de jeu pour nos déambulations libertaires, ce fut mû, assurément,
  par notre frilosité plutôt que par leurs attraits historiques, culturels
  et humains (même si ceux-ci sont indéniables).
  Timides et peureux, il nous fallait au moins la facilité de ces chemins
@@ -2763,7 +2309,7 @@ Compostelle
 , tout le monde semble l'avoir fait, connaître un tiers l'ayant fait ou
  encore rêver de le faire.
  Tout ce même monde va de son avis implacable et, pour situer les deux marcheurs
- au long court que nous sommes, pète à la queue-leu-leu des questions à
+ au long cours que nous sommes, pète à la queue-leu-leu des questions à
  la thématique bornée : 
 \begin_inset Quotes fld
 \end_inset
@@ -2811,7 +2357,7 @@ sentier jacquaire officiel
  C'est tout de même un comble, pour deux apprentis libertaires !
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Rêveries à Grand-Lieu
 \end_layout
 
@@ -2933,7 +2479,7 @@ Il y aurait eu tant d'autres observations à faire en ce lieu.
  écosystème, son lot de nouveaux occupants.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Le concombre nous maudit
 \end_layout
 
@@ -3020,10 +2566,10 @@ oracle
 
 .
  Nous avons abandonné un légume -- produit simple et non transformé -- alors
- que la plupart d'entre nous mangeons de la merde -- hyper transformée,
- grasse, saturée en sel...
- -- faisant confiance à l'industrie agroalimentaire, où se créent et se
- conditionnent de vastes supercheries.
+ que la plupart d'entre nous malbouffons des mets hyper transformés, gras,
+ saturés en sel...
+ faisant confiance à l'industrie agroalimentaire, où se créent et se conditionne
+nt de vastes supercheries.
 \end_layout
 
 \begin_layout Standard
@@ -3077,7 +2623,7 @@ miramap.org
  potager ou un potager collectif.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Le lièvre et l'orage
 \end_layout
 
@@ -3099,7 +2645,7 @@ e
  Un contraste météorologique dont les deux composantes n'étaient pas plus
  enviables l'une que l'autre.
  Pourtant et malgré cela, ces deux régions sont superbes et leurs traversées
- nous fût sympathique.
+ nous fut sympathique.
 \end_layout
 
 \begin_layout Standard
@@ -3163,14 +2709,13 @@ Il pleut, il pleut
 \end_layout
 
 \begin_layout Standard
-Ni une ni deux, son prince charmant fût debout pour constater que, non,
+Ni une ni deux, son prince charmant fut debout pour constater que, non,
  il ne pleuvait pas la moindre goutte d'eau.
  Quelle cinglée cette princesse dormante ! Pourtant, elle dût avoir une
  intuition somnambule ou faire un rêve prémonitoire.
  Car dehors flambaient, à intervalles réguliers, des boules colorées-foncées,
  jaunâtres et orangées.
- Un orage.
- Un putain d'orage !
+ Un orage !
 \end_layout
 
 \begin_layout Standard
@@ -3246,7 +2791,7 @@ h
  Et la légende dit que même les lièvres ne s'en sont pas remis.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Rencontres sauvages
 \end_layout
 
@@ -3340,10 +2885,6 @@ Tous font partie de cette faune sauvage que nous essayons d'observer, en
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 2
-\end_layout
-
-\begin_layout Section*
 Nos chemins de liberté
 \end_layout
 
@@ -3410,8 +2951,7 @@ anciens combattants
  une belle coquille, on ne sait où.
  Que nous marchions sous une douce pinède ou sur un humide humus forestier,
  que nous traversions de mignonnets vieux villages médiévaux ou quelques
- rivières asséchées, putain, qu'il était frustrant d'être vagabonds en ces
- lieux.
+ rivières asséchées, qu'il était frustrant d'être vagabonds en ces lieux.
  Ce n'était pourtant pas l'endroit qui manquait de charmes.
  Mais sur ces chemins, nous nous sentions comme deux canards en plastique,
  peints d'une coquille Saint-Jacques, qui filaient lentement sur un filet
@@ -3611,7 +3151,7 @@ ce là
  tandis que les chamois cabriolent.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Désapproprions nous !
 \end_layout
 
@@ -3764,7 +3304,7 @@ Peut-être, alors, que ce couple du
  qu'au bord d'une route communale de Creuse.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 La Brenne
 \end_layout
 
@@ -3902,7 +3442,7 @@ Si, comme nous, vous aimez le tourisme tranquille et observer la nature,
  belle.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Photographies de Creuse
 \end_layout
 
@@ -4168,7 +3708,7 @@ L'ambiance, donc, est aux embrassades.
  éclaircies creusoises, qui vont nous gâcher la vie.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Anniversaire auvergnat
 \end_layout
 
@@ -4331,7 +3871,7 @@ Nous voici à Saint-Flour, en limite de Cantal, pour y découvrir nos prochains
  itinéraires.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Les chamois
 \end_layout
 
@@ -4428,7 +3968,7 @@ mètres en l'air, sur le sommet tout proche, quatre chamois broutaient l'herbe
 Quel heureux moment.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 La montée d'Albepierre
 \end_layout
 
@@ -4496,10 +4036,6 @@ Me voilà assise à vous écrire ces quelques mots, alors que Mathieu, en caleç
 \end_layout
 
 \begin_layout Chapter*
-Chapitre 3
-\end_layout
-
-\begin_layout Section*
 Lozère, ruisseau et langues de bœuf
 \end_layout
 
@@ -4577,7 +4113,7 @@ Elles finirent pourtant pas se lasser de nous et s'en allèrent paître plus
  Ah ! que notre ruisseau frémissant semblait loin.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Portrait d'un Sud
 \end_layout
 
@@ -4824,7 +4360,7 @@ es sur la plage (lisant et écrivant) et nous baignâmes dans la chaude eau
  l'eau et dans les airs -- un joli spectacle au coucher du soleil.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Trois arrières-pays
 \end_layout
 
@@ -5075,7 +4611,7 @@ Mais le voyage va au-delà des kilomètres ; il est aussi et surtout dans
  nos têtes.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 En état de guerre
 \end_layout
 
@@ -5410,7 +4946,7 @@ Quant à nous, dans notre marche qui perdurera jusqu'au début de l'automne,
  nous sommes désormais plus alertes que jamais.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Vagabondages hygiéniques
 \end_layout
 
@@ -5771,7 +5307,7 @@ aglagla
 Non encore classés
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Je voyage dans les nuages
 \end_layout
 
@@ -5883,7 +5419,7 @@ Pour exister au delà de mon horizon nu.
 En somme, je voyage dans les nuages.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Chapter*
 Gastronomie de grands chemins
 \end_layout
 
@@ -6302,6 +5838,193 @@ pommes et chocolat, en dessert.
 
 \begin_layout Plain Layout
 Et un gros dodo, le ventre plein, emmitouflés dans nos duvets d'amoureux.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Part
+Annexes
+\end_layout
+
+\begin_layout Chapter*
+Carnet de route
+\end_layout
+
+\begin_layout Standard
+Les 10
+\begin_inset space ~
+\end_inset
+
+pages ou 5
+\begin_inset space ~
+\end_inset
+
+feuillets qui suivent forment le 
+\emph on
+carnet de route
+\emph default
+ de notre 
+\begin_inset Quotes fld
+\end_inset
+
+descente de Loire
+\begin_inset Quotes frd
+\end_inset
+
+ en kayak.
+\end_layout
+
+\begin_layout Standard
+Découpez-le, adaptez-le et servez-vous en pour descendre ce beau fleuve,
+ de sa source jusqu'à son estuaire, ou simplement quelques-uns de ses mille
+ kilomètres.
+\end_layout
+
+\begin_layout Standard
+Il est composé de trois parties.
+\end_layout
+
+\begin_layout Standard
+La 1
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+ère
+\end_layout
+
+\end_inset
+
+ est un tableau et sa légende, listant les villes et autres lieux remarquables
+ bordant la Loire, ainsi que des informations sur chacun (kilomètres, attraits
+ culturel, dangers et difficultés à proximité...).
+\end_layout
+
+\begin_layout Standard
+La 2
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ est une liste des dangers et des difficultés qui jalonnent le fleuve, ainsi
+ que les manières dont nous les avons passés et appréhendés.
+ Ceux-ci sont numérotés de 1
+\begin_inset space ~
+\end_inset
+
+à
+\begin_inset space ~
+\end_inset
+
+49 et cités dans le 1
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+ère
+\end_layout
+
+\end_inset
+
+ partie.
+\end_layout
+
+\begin_layout Standard
+La 3
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ partie inclut deux petites cartes, centrées sur les deux grands barrages
+ de la Loire : celui de Grangent et celui de Villerest.
+ Y sont tracés les cheminements que nous avons suivis pour les franchir,
+ portant notre kayak sur un kilomètre et demi, à chaque fois.
+\end_layout
+
+\begin_layout Standard
+Vous saurez donc les lieux pratiques et/ou sympas où vous arrêter, les difficult
+és auxquelles vous serez confrontés et comment les franchir.
+ Pour le reste, nous vous encourageons à improviser et vous laisser aller...
+\end_layout
+
+\begin_layout Standard
+Une toute dernière précision, d'importance cependant.
+ Nous avons descendu la Loire en avril et mai
+\begin_inset space ~
+\end_inset
+
+2011, par (très) basses eaux et (très) beau temps, sur un kayak démontable,
+ bien plus fragile que leurs homologues rigides ou gonflables.
+ Ce contexte est -- bien entendu -- à prendre en compte, dans votre lecture
+ de ce 
+\emph on
+carnet de route
+\emph default
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{flushleft}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+newgeometry{margin=0.5cm, left=1.5cm}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+pagestyle{empty}
+\end_layout
+
+\end_inset
+
+
+\begin_inset CommandInset include
+LatexCommand include
+filename "Roadbook Loire.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{flushleft}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
 \end_layout
 
 \end_inset
